# geneticfuckery

./: .gitignore  README.md  pyproject.toml
geneticfuckery/: __init__.py  config.py  differ.py  gf.py
test/: test_gf.py
